2010-03-05  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Darin Fisher.

        Take out code hack that flips the result of NPP_HandleEvent.  This needs to move to
        the NPAPI code so that Pepper plugins don't hit it.
        https://bugs.webkit.org/show_bug.cgi?id=35779

        * public/WebPluginContainer.h:
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::handleMouseEvent):
        (WebKit::WebPluginContainerImpl::handleKeyboardEvent):

2010-03-05  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Do not show link helper in popovers and/or for external resources.

        https://bugs.webkit.org/show_bug.cgi?id=35785

        * src/js/DebuggerAgent.js:
        (devtools.DebuggerAgent.prototype.initUI):
        (devtools.DebuggerAgent.prototype.addScriptInfo_):

2010-03-04  Garret Kelly  <gdk@chromium.org>

        Reviewed by Darin Fisher.

        Adding PlatformTouchEventBuilder and PlatformTouchPointBuilder for
        converting Chromium WebTouchEvent and WebTouchPoint types to
        corresponding WebCore types.
        https://bugs.webkit.org/show_bug.cgi?id=35760

        * src/WebInputEventConversion.cpp:
        (WebKit::toPlatformTouchEventType):
        (WebKit::toPlatformTouchPointState):
        (WebKit::PlatformTouchPointBuilder::PlatformTouchPointBuilder):
        (WebKit::PlatformTouchEventBuilder::PlatformTouchEventBuilder):
        * src/WebInputEventConversion.h:

2010-03-04  John Gregg  <johnnyg@google.com>

        Reviewed by Darin Fisher.

        [chromium] WebDocument:applicationID() crashes on <meta> tag with no http-equiv attribute
        https://bugs.webkit.org/show_bug.cgi?id=35771

        * src/WebDocument.cpp:
        (WebKit::WebDocument::applicationID):
        check for presence of http-equiv attribute before lower()ing it.

2010-03-04  Darin Fisher  <darin@chromium.org>

        Reviewed by Dmitry Titov.
